--- a/redux-desde-cero/05-performance-optimizations/package.json
+++ b/redux-desde-cero/05-performance-optimizations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "05-performance-optimizations",
-  "description": "Código base del ejemplo Performance Optimizations donde se ven los conceptos basicos de redux y redux toolkit.",
+  "description": "Código base del proyecto Blog Project donde se ven los conceptos basicos de redux y redux toolkit.",
   "private": true,
   "version": "1.0.0",
   "type": "module",
