--- a/react-rtk-crud/package.json
+++ b/react-rtk-crud/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-rtk-crud",
-  "description": "Código base del ejemplo react-rtk-crud donde se realiza un crud para entender los conceptos basicos de redux, redux toolkit y Tailwind CSS.",
+  "description": "Código base de la Interfaz Tasks Pending hecha en React, Redux, Redux Toolkit y Tailwind CSS.",
   "private": true,
   "version": "1.0.0",
   "type": "module",
